[project]
name = "rsch650-ntsb-analytics"
version = "0.1.0"
description = "Streamlit app and data pipeline for analyzing NTSB/CAROL aviation accident data."
authors = [{ name = "Jeremy Scott Feagan", email = "jeremy.feagan@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","B","UP","SIM","RUF"]
ignore = ["E203"]  # keep Black compatible
exclude = '''
/(
  \.venv
  | build
  | dist
  | \.git
  | \.mypy_cache
  | \.pytest_cache
)/
'''

[tool.ruff.isort]
known-first-party = ["analysis","loaders","labelers","decoder","normalize","lookups","audit","config"]
